# prediction-market

./: .editorconfig  .gitignore  .prettierignore  Anchor.toml  Arcium.toml  Cargo.toml  LICENSE  README.md  hide-old.mjs  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.anchor.json  tsconfig.base.json
app/: .gitignore  next.config.ts  package.json
app/src/app/: globals.css  layout.tsx  page.tsx  wallet-overrides.css
app/src/hooks/: useCancelMarket.ts  useClaimPayout.ts  useCreateMarket.ts  useMarkets.ts  usePortfolio.ts  useResolveMarket.ts  useSubmitPosition.ts  useWithdrawPosition.ts
app/src/types/: index.ts
backend/: .firebaserc  firebase.json  firestore.indexes.json  firestore.rules
backend/functions/: package.json  tsconfig.json
docs/: DEPLOYMENT.md
encrypted-ixs/: Cargo.toml
encrypted-ixs/src/: lib.rs
programs/prediction_market/: Cargo.toml
programs/prediction_market/src/: constants.rs  error.rs  events.rs  instructions.rs  lib.rs  state.rs
programs/prediction_market/src/instructions/: cancel_market.rs  claim_payout.rs  create_market.rs  init_comp_defs.rs  init_market_totals.rs  initialize.rs  resolve_market.rs  submit_position.rs  withdraw_position.rs
programs/prediction_market/src/state/: config.rs  market.rs  position.rs
scripts/: check-mpc-final.sh  cleanup-positions.ts  debug-submit-from-app.ts  e2e-devnet.ts  e2e-resolve-claim.ts  init-comp-defs.ts
tests/anchor/: prediction_market.ts
workers/indexer/: .dockerignore  .env.example  Dockerfile  docker-entrypoint.sh  pyproject.toml  requirements.txt
(+36 files in other folders)
